--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "child-process": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2-canary.6",
+    "next": "^15.2.2-canary.6",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "shadcn": "^2.4.0-canary.14",
