--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^15.2.2-canary.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
