--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "recharts": "^2.15.1",
     "shadcn": "^2.4.0-canary.14",
     "sonner": "^2.0.1",
