--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.3",
+    "chart.js": "^4.4.9",
     "child-process": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.5",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.479.0",
     "next": "^15.2.2-canary.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
