--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-countup": "^6.5.3",
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-native-paper": "^5.13.4",
